# issue-20221116-python_protobuf_cloudevents

./: .cruft.json  .editorconfig  Makefile  README.md  buf.gen.yaml  cookiecutter-input.yaml  pyproject.toml  setup.cfg
devscripts/: protoc_fixer.py
devtools/: Dockerfile  Makefile
spec/proto/: buf.yaml
spec/proto/example/v1/: messages.proto
spec/proto/example/v2/: messages.proto
src/argparse/: __init__.py
src/example/aucampia/nsconflict/: __init__.py  cli.py
src/lib2to3/sub/: __init__.py
src/mailbox/sub/: __init__.py
tests/: test_conflicting_ns.py  test_something.py
