# https://python-poetry.org/docs/pyproject/
# https://www.python.org/dev/peps/pep-0621/
[tool.poetry]
name = "example.aucampia.nsconflict"
version = "0.0.0"
description = ""
authors = []
license = "UNLICENSED"
readme = "README.md"
packages = [
    {include = "example", from = "src"},
    {include = "*", from = "generated/betterproto"},
    {include = "*", from = "generated/protol"},
    # {include = "*", from = "generated/proto"},
]

# [tool.poetry.scripts]
# "example.aucampia.nsconflict-cli" = "example.aucampia.nsconflict.cli:main"


[tool.poetry.dependencies]
python = "~3.9"
pydantic = ">=1"
PyYAML = ">=6"
protobuf = "^4.21.9"
#
betterproto = {version = "^2.0.0b5", allow-prereleases = true}

[tool.poetry.dev-dependencies]
black = ">=22"
codespell = ">=2,<2.2"
flake8 = ">=4"
flake8-black = ">=0"
flake8-bugbear = ">=22"
flake8-isort = ">=4"
flake8-bandit = ">=2"
isort = ">=5"
mypy = ">=0"
pep8-naming = ">=0"
pycln = ">=1"
pytest = ">=7"
pytest-cov = ">=3"
safety = ">=1"
types-click = ">=7"
types-PyYAML = ">=6"
typing-extensions = ">=4"
mypy-protobuf = "^3.4.0"
types-protobuf = "^3.20.4.5"
rope = "^1.4.0"
betterproto = {extras = ["compiler"], version = "^2.0.0b5", allow-prereleases = true}
protoletariat = "^1.1.0"

[tool.coverage.report]
# https://coverage.readthedocs.io/en/coverage-5.0/config.html
show_missing = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files.html
profile = "black"
src_paths = ["src", "tests", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov-config=pyproject.toml", "--cov=src"]
# https://docs.pytest.org/en/stable/customize.html
# https://docs.pytest.org/en/stable/reference.html#configuration-options
log_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"
log_cli_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
files = "src,tests,devscripts"
mypy_path = "src,generated/proto,generated/betterproto,generated/protol,devscripts"
python_version = "3.7"
strict = true
warn_unreachable = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "rope.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "_plgen.*"
ignore_errors = true

#

[build-system]
#
requires = ["setuptools","poetry-core>=1.2.0"]
#
build-backend = "poetry.core.masonry.api"
